--- a/src/firebaseHelloWorld/client/css/main.css
+++ b/src/firebaseHelloWorld/client/css/main.css
@@ -1,5 +1,13 @@
-*{ font-family: sans-serif; background: #282828; color: #FFFFFF;}
+/* Common */
+* {font-family: sans-serif; background: #282828; color: #FFFFFF;}
 h1 {font-size: 20px; font-weight: normal; color: #AEAEAE; text-align: center}
+div.page{margin-left: auto; margin-right: auto; width: 190px;}
 
-div#pageMain{margin-left: auto; margin-right: auto; width: 190px;}
-div#slider{height:120px; width: 190px;}
+/* Connecting page */
+div#pageConnecting {display: block; text-align: center;}
+img#imgConnecting { width: 31px;}
+
+
+/* Main page*/
+div#pageMain {display: none;}
+div#slider {height:120px; width: 190px;}
